--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="format-detection" content="telephone=yes, email=no">
     <title>my-cymoh5</title>
     <!-- //这里进行初始化变量的设置 以便于rem生效与页面初始化 -->
     <script type="text/javascript" src="static/js/flexible.js"></script>
